--- a/styles/common/PopupSearchMob.css
+++ b/styles/common/PopupSearchMob.css
@@ -22,7 +22,7 @@
   right: 16px;
   width: 24px;
   height: 24px;
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(86, 255, 91, 0.1);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -34,6 +34,7 @@
           align-items: center;
   border-radius: 50px;
   font-size: 17px;
+  color: #74c044;
 }
 
 .search-popup .container {
@@ -71,6 +72,7 @@
   font-size: 16px;
   text-align: center;
   opacity: .7;
+  color: #74c044;
   border-radius: 50px;
 }
 
@@ -110,7 +112,7 @@
 .search-popup .icons .search-block i {
   font-size: 24px;
   margin-top: 15px;
-  color: #444444;
+  color: #74c044;
 }
 
 .search-popup .icons .search-block p {
