--- a/styles/common/PopupSearchMob.scss
+++ b/styles/common/PopupSearchMob.scss
@@ -19,12 +19,13 @@
         right: 16px;
         width: 24px;
         height: 24px;
-        background: rgba(0, 0, 0, 0.1);
+        background: rgba(86, 255, 91, 0.1);
         display: flex;
         justify-content: center;
         align-items: center;
         border-radius: 50px;
         font-size: 17px;
+        color: $primaryGreenColor;
     }
     .container {
         width: calc(100% - 40px) !important;
@@ -53,6 +54,7 @@
             font-size: 16px;
             text-align: center;
             opacity: .7;
+            color: $primaryGreenColor;
             border-radius: 50px;
         }
     }
@@ -75,7 +77,7 @@
             i {
                 font-size: 24px;
                 margin-top: 15px;
-                color: rgb(68, 68, 68);
+                color: $primaryGreenColor;
             }
             p {
                 font-size: 14px;
